=================
Changes for Crate
=================

Unreleased
==========

 - Added support for global aggregations on subselects.

 - Added the ``-C`` option for providing Crate settings and deprecated
   usage of the ``.es`` prefix with ``-D`` option.

 - Added support for global aggregations on joins

 - Log unhandled HTTP related exceptions as `debug` instead of `error`.

 - Fixed NPE that can occur on invalid HTTP requests.

 - Implemented ``if`` conditional function.

 - F261/F262: Implemented ``CASE`` expression support.

 - BREAKING: Removed ``schema_name`` from ``information_schema.tables``,
   ``information_schema.columns`` and ``information_schema.table_constraints``
   in favour of ``table_schema``.

 - Removed the ``client`` package which contained the deprecated ``crate-client``.
   You should start using the PostgreSQL JDBC driver instead.

 - Removed the duplicate `rowcount` field from the HTTP response.

 - Added the ``search_path`` session setting parameter. The default table
   schema can be set with ``SET SESSION search_path = schema_name``.

 - Removed java7 support

2016/11/10 0.57.1
=================

 - Fixed NPE in the ``percentile`` aggregation fucntion. The NPE was occurring
   in case when queried shards have no records.

 - Fixed an issue with select queries returning duplicate outputs
   when `where` uses `=` with `primary key` and an order by which is
   also part of the selected fields is used.

 - Fixed adding a column to an existing object array using `ALTER TABLE`

 - Fix: selecting os_info['jvm']['vm_vendor'] and os_info['jvm']['name'] caused
   ColumnUnknownExceptions

 - Removed reduced thread stack size java option, stack size defaults
   to JVM defaults now.

 - Fixed an issue that causes outer joins to fail with an exception
   if columns are referenced in a where clause but not as select items.

 - Updated crate-admin to ``0.21.2`` which includes the following change:
